# YonexAnh-TelegramDrive

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: main.yml  release.yml
app/: index.html  package-lock.json  package.json  test_upload.txt
app/scripts/: tauri-wrapper.mjs
app/src/: App.css  App.tsx  types.ts  utils.ts  version.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: bandwidth.rs  lib.rs  main.rs  models.rs  server.rs
app/src-tauri/src/commands/: auth.rs  fs.rs  google_drive.rs  mod.rs  network.rs  preview.rs  streaming.rs  utils.rs
app/src/components/: AuthWizard.tsx  Dashboard.tsx  ErrorBoundary.tsx  FileTypeIcon.tsx  LanguageToggle.tsx  ThemeToggle.tsx  UpdateBanner.tsx
app/src/components/dashboard/: ActivityLogPanel.tsx  AdvancedSearchPanel.tsx  BackupRestorePanel.tsx  BandwidthWidget.tsx  ContextMenu.tsx  DetailsPanel.tsx  DiagnosticsPanel.tsx  DownloadQueue.tsx  DragDropOverlay.tsx  EmptyState.tsx  ExternalDropBlocker.tsx  FileCard.tsx  FileExplorer.tsx  FileListItem.tsx  GoogleDrivePanel.tsx  LocalSyncPanel.tsx  MediaPlayer.tsx  MoveToFolderModal.tsx  PdfViewer.tsx  PreviewModal.tsx  RenameModal.tsx  Sidebar.tsx  TopBar.tsx  (+5 more)
app/src/context/: ConfirmContext.tsx  LanguageContext.tsx  ThemeContext.tsx
app/src/contexts/: DropZoneContext.tsx
app/src/hooks/: useFileDownload.ts  useFileDrop.ts  useFileOperations.ts  useFileUpload.ts  useKeyboardShortcuts.ts  useLocalSync.ts  useNetworkStatus.ts  useTelegramConnection.ts  useUpdateCheck.ts
