[package]
name = "app"
version = "1.2.0"
description = "A Tauri App"
authors = ["YonexAnh"]
edition = "2021"



[lib]

name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
grammers-client = { git = "https://github.com/Lonami/grammers", rev = "d07f96f" }
grammers-session = { git = "https://github.com/Lonami/grammers", rev = "d07f96f" }
grammers-mtsender = { git = "https://github.com/Lonami/grammers", rev = "d07f96f" }
grammers-tl-types = { git = "https://github.com/Lonami/grammers", rev = "d07f96f" }
tokio = { version = "1", features = ["full"] }

tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2"
chrono = "0.4"
base64 = "0.21"
log = "0.4"
env_logger = "0.11"
tauri-plugin-updater = "2.9.0"
actix-web = "4"
actix-cors = "0.7"
futures = "0.3"
async-stream = "0.3"
actix-rt = "2"
tauri-plugin-process = "2.3.1"
rand = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["form", "json", "query", "rustls"] }
sha2 = "0.10"
url = "2"
urlencoding = "2"
